--- a/action.yml
+++ b/action.yml
@@ -7,8 +7,8 @@ runs:
     - run: |
         if [[ -e README.md ]]; then
           sed -i 's~svg)](https://open.vscode.dev/.*)~svg)](https://open.vscode.dev/${{ github.repository }})~g' README.md
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --local user.email "${{ github.actor }}@users.noreply.github.com"
+          git config --local user.name "${{ github.actor }}"
           git add README.md
           git commit -m "Updated Open in VSCode link" || exit 0
           git push
